# quill

./: .gitignore  CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: claude-design-brief-v0.3.0.md  claude-design-brief-v0.5.0.md  design-system.md
docs/testing/: manual-checklist.md
flatpak/: README.md  com.lauta.quill.desktop  com.lauta.quill.metainfo.xml  com.lauta.quill.yml
scripts/: download-whisper-cli.ps1  download-whisper-cli.sh
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: tray-error.rgba  tray-idle.rgba  tray-recording.rgba
src-tauri/src/: audio.rs  beeps.rs  circuit_breaker.rs  config.rs  cost_alert.rs  display_server.rs  error.rs  events.rs  failed_wav.rs  focused_window.rs  hardware.rs  history.rs  hotkey.rs  injector.rs  lib.rs  main.rs  mic_test.rs  models.rs  orchestrator.rs  paths.rs  post_process.rs  secrets.rs  tray.rs  types.rs  usage.rs  wayland_paste.rs
src-tauri/src/audio/: tests.rs
src-tauri/src/circuit_breaker/: tests.rs
src-tauri/src/commands/: config.rs  devices.rs  dictation.rs  groq.rs  hardware.rs  history.rs  llm_polish.rs  mod.rs  models.rs  platform.rs  usage.rs  wizard.rs
src-tauri/src/config/: tests.rs
src-tauri/src/engines/: dispatch.rs  groq.rs  local.rs  mod.rs
src-tauri/src/engines/groq/: catalog.rs  tests.rs
src-tauri/src/history/: tests.rs
src-tauri/src/hotkey/: rdev_backend.rs  wayland_backend.rs
src-tauri/src/llm_polish/: anthropic.rs  catalog.rs  error.rs  groq.rs  mod.rs  openai.rs  tests.rs
src-tauri/src/models/: tests.rs
src-tauri/src/paths/: tests.rs
src-tauri/src/post_process/: tests.rs
src-tauri/src/secrets/: tests.rs
src-tauri/src/types/: tests.rs
src-tauri/tests/: orchestrator_flow.rs
src-tauri/tools/: make_icons.ps1
src/lib/components/settings/: PolishPreview.svelte  PolishSection.svelte  ProviderKeyPanel.svelte
src/lib/components/ui/: Accordion.svelte  BarChart.svelte  Button.svelte  CloudModelCard.svelte  DotSpinner.svelte  Dropdown.svelte  EmptyState.svelte  HistoryEntry.svelte  Icon.svelte  KeyCap.svelte  KeyCapture.svelte  Modal.svelte  ModelCard.svelte  OverlayPositionPicker.svelte  PasswordInput.svelte  Pill.svelte  ProgressBar.svelte  ProgressCard.svelte  RadioCard.svelte  RevokedBanner.svelte  Segmented.svelte  Sidebar.svelte  SidebarNavItem.svelte  Slider.svelte  Spinner.svelte  StatusDot.svelte  TitleBar.svelte  Toast.svelte  Toggle.svelte  Tooltip.svelte  VuMeter.svelte  Waveform.svelte  index.ts
src/lib/components/ui/icons/: IconAlert.svelte  IconCheck.svelte  IconChevron.svelte  IconClipboard.svelte  IconClock.svelte  IconCommand.svelte  IconCopy.svelte  IconCpu.svelte  IconEye.svelte  IconEyeOff.svelte  IconFeather.svelte  IconHistory.svelte  IconLayout.svelte  IconMic.svelte  IconModels.svelte  IconMoon.svelte  IconPause.svelte  IconPresets.svelte  IconReinsert.svelte  IconSearch.svelte  IconSettings.svelte  IconSparkles.svelte  IconSun.svelte  IconTrash.svelte  IconUsage.svelte  IconVocab.svelte  IconX.svelte
src/lib/components/wizard/: StepEngine.svelte  StepPermissions.svelte  StepSetup.svelte  StepTest.svelte  StepWelcome.svelte
src/lib/ipc/: commands.ts  events.ts
src/lib/stores/: config.svelte.ts  counts.svelte.ts  platform.svelte.ts  status.svelte.ts  theme.svelte.ts  wizard.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: diff.ts  format.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/design/: +page.svelte
src/routes/main/: +layout.svelte  +page.svelte
src/routes/main/modelos/: +page.svelte
src/routes/main/presets/: +page.svelte
src/routes/main/settings/: +page.svelte
src/routes/main/uso/: +page.svelte
src/routes/main/vocabulario/: +page.svelte
src/routes/overlay/: +page.svelte
src/routes/wizard/: +page.svelte
